# pynotion

./: README.md  pyproject.toml
src/pynotion/: __init__.py
src/tests/: test_notion.py
