[project]
name = "pynotion"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Osada", email = "alexandre.osada.dev@gmail.com"},
]
dependencies = [
    "requests<=2.29.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pylint>=2.17.4",
    "pyright>=1.1.308",
]
[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]
